# caustic3-vita-wrapper

./: .gitignore  CMakeLists FUNKTIONIERT  CMakeLists.txt  CMakeLists.txt OLD  README.md  caustic-3-3-2-0.apk:Zone.Identifier
TEMPassets/demo/presets/8bitsynth/: ANGRY ROBOT.8bitsynth  BIRKIN.8bitsynth  BOTH WORLDS.8bitsynth  BROKEN TARDIS.8bitsynth  CAR ALARM.8bitsynth  COMPUTING.8bitsynth  DATA ERROR.8bitsynth  EDGY SQUARE.8bitsynth  EFFEM.8bitsynth  GRIT BASS.8bitsynth  GRUNGY LASER.8bitsynth  HAPPY ARP.8bitsynth  HIDDEN MESSAGE.8bitsynth  LOFI MUSIC BOX.8bitsynth  MOTHERSHIP.8bitsynth  NOT QUITE SQUARE.8bitsynth  PINK DROP.8bitsynth  POWER SYNTH.8bitsynth  ROCK GUITAR LEAD.8bitsynth  SAW DROP.8bitsynth  SKAROT.8bitsynth  SMOKER.8bitsynth  SQUARE SAW.8bitsynth  STORYTELLER.8bitsynth  WHISPER.8bitsynth  WURSTBRU.8bitsynth
TEMPassets/demo/presets/bassline/: BOOTZEE.bassline  CHEAP HORN.bassline  DEFAULT.bassline  FUZZED.bassline  GUITARLEAD.bassline  PWM TRANCE.bassline  WAH STEP.bassline
TEMPassets/demo/presets/beatbox/: ACE.beatbox  C64.beatbox  COFFEE CAN.beatbox  CR78-Perc.beatbox  CR78.beatbox  DD5.beatbox  DOWNTEMPO.beatbox  EGGBEAT.beatbox  EMPTY.beatbox  KR55.beatbox  LM2-Perc.beatbox  ODMX.beatbox  PQ ROCK.beatbox  Thick Room 9.beatbox  badcat.beatbox  brushcat.beatbox  hotel caledonia.beatbox  indycat.beatbox  kitchencat.beatbox  latincat.beatbox
TEMPassets/demo/presets/fmsynth/: AMELIE.fmsynth  BRASSY.fmsynth  CHORD PAD.fmsynth  DEFAULT.fmsynth  DRONE.fmsynth  EPIANO BRIGHT.fmsynth  EPIANO.fmsynth  ESKAPAD.fmsynth  GLITCH MALLET.fmsynth  GROWLER BASS.fmsynth  HOLLOW PIPE.fmsynth  HORNY SHY.fmsynth  IQING.fmsynth  LOW DRONE.fmsynth  OBOE.fmsynth  OVERLORD.fmsynth  PH CELLO.fmsynth  PH EPIANO.fmsynth  PH FLUGEL.fmsynth  PH JAZZ GUITAR.fmsynth  PH LOG DRUM.fmsynth  (+11 more)
docs/: PERMISSION.md
docs/private/: permission-rej-2025-10-18.eml  permission-rej-2025-10-18.eml:OECustomProperty
src/: audio.c  audio.h  libloader - Kopie.back  libloader.c  libloader.c:Zone.Identifier  libloader.h  main.c  resolve.c  resolve.h  so_util.c  so_util.h  soloader.c  soloader.h
(+788 files in other folders)
